# l2glite

./: LICENSE  README.md  pyproject.toml
data/nas/: country_codes.csv
examples/: RGD_Snap_AS_withRGD_code.ipynb  nas.ipynb
l2gl/: emb_geotorch.py  manopt_optimization.py
l2gl/embedding/: __init__.py  train.py
l2gl/embedding/gae/: __init__.py
l2gl/embedding/gae/layers/: GAEconv.py  VGAEconv.py  __init__.py  decoders.py
l2gl/embedding/gae/models/: __init__.py  gae.py  vgae.py
l2gl/embedding/gae/utils/: loss.py
l2gl/patch/: __init__.py  lazy.py  opt.py  patch.py  patches.py  utils.py
l2gl/utils/: __init__.py  dataloader.py  utils.py
